# ADS-ss2020-

./: .gitignore
01/: List.h
01_b/: Node.h
avl_tree/: AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  CMakeLists.txt  main.cpp
prak01/01/: Node.cpp  Node.h  Test.cpp
prak01/01_a/: List.cpp  List.h  main.cpp
prak01/01_b/: CMakeLists.txt  List.h
prak01/01_c/: CMakeLists.txt  Node.h  main.cpp
praktikum/prak01/01_a/: CMakeLists.txt  List.cpp
praktikum/prak01/01_b/: main.cpp
praktikum/prak01/01_c/: Tweet.h
praktikum/prak02/bst/: CMakeLists.txt  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  TreeTest.cpp  main.cpp
praktikum/prak02/ringbuffer/: CMakeLists.txt  Ring.cpp  Ring.h  RingNode.cpp  RingNode.h  RingTest.cpp  main.cpp  print.cpp  print.h
praktikum/prak03/: CMakeLists.txt  ExportZielanalyse_Fall2.csv  Tree.cpp  Tree.h  TreeNode.h  TreeTest.cpp  main.cpp
praktikum/prak04_sorting/: CMakeLists.txt  hashtable.cpp  hashtable.h  main.cpp  sorting.cpp  sorting.h  unit_tests.cpp
praktikum/prak04_sorting/errors_solution/: openMP_configuration.txt
praktikum/prak04_sorting/gnuplot_time_measurement/: font_error_solution.txt  heapsort.txt  mergesort.txt  plots.gnu  quicksort.txt  shellsort.txt
praktikum01/: List.h  Test.cpp
praktikum01_b/: CMakeLists.txt  List.h
